[package]
name = "neopolitan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
fs_extra = "1.3.0"
html-escape = "0.2.13"
logos = "0.12.1"
minijinja = { version = "0.30.7", features = ["source"] }
nom = "7.1.3"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
syntect = "5.0.0"
tokio = "1.28.0"
walkdir = "2"
watchexec = "2.3.0"
watchexec-events = "1.0.0"


[lib]
doctest = false
