[package]
name = "neopolitan"
version = "0.2.0"
edition = "2024"

[dev-dependencies]
minijinja = { version = "2.9.0", features = ["custom_syntax", "json", "loader"] }
pretty_assertions = "1.4.1"
walkdir = "2"


[dependencies]
anyhow = "1.0.98"
nom = "8.0.0"
rstest = "0.25.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"




# chrono = "0.4.26"
# eyre = "0.6.8"
# fs_extra = "1.3.0"
# html-escape = "0.2.13"
# itertools = "0.11.0"
# logos = "0.12.1"
# miette = "5.8.0"
# minijinja = { version = "0.30.7", features = ["source"] }
# nom = "7.1.3"
# regex = "1.8.1"
# rstest = "0.17.0"
# rusqlite = "0.29.0"
# scraper = "0.16.0"
# serde = { version = "1.0.154", features = ["derive"] }
# serde_json = "1.0.94"
# syntect = "5.0.0"
# tokio = "1.28.0"
# urlencoding = "2.1.2"
# walkdir = "2"
# watchexec = "2.3.0"
# watchexec-events = "1.0.0"
# watchexec-signals = "1.0.0"


# [lib]
# doctest = false
